WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80404
r109563
caused perf regression
https://bugs.webkit.org/show_bug.cgi?id=80404
Summary
r109563 caused perf regression
Roland Steiner
Reported
2012-03-06 02:46:30 PST
The culprit is one line in CSSStyleSelector::pushParentElement(): changing from parentOrHostElement() to parentOrHostNode(), causing a 20% perf regression in Parser/html5-full-render.html.
Attachments
Patch
(1.79 KB, patch)
2012-03-06 02:49 PST
,
Roland Steiner
no flags
Details
Formatted Diff
Diff
Patch
(1.93 KB, patch)
2012-03-06 03:19 PST
,
Roland Steiner
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Roland Steiner
Comment 1
2012-03-06 02:49:38 PST
Created
attachment 130346
[details]
Patch
Roland Steiner
Comment 2
2012-03-06 03:19:37 PST
Created
attachment 130348
[details]
Patch
WebKit Review Bot
Comment 3
2012-03-06 04:43:11 PST
Comment on
attachment 130348
[details]
Patch Clearing flags on attachment: 130348 Committed
r109906
: <
http://trac.webkit.org/changeset/109906
>
WebKit Review Bot
Comment 4
2012-03-06 04:43:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug