r109563 caused perf regression https://bugs.webkit.org/show_bug.cgi?id=80404

Add test for Element or ShadowRoot.

Reviewed by Antti Koivisto.

No new tests. (fix)

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::pushParentElement):


Canonical link: https://commits.webkit.org/97544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109906 268f45cc-cd09-0410-ab3c-d52691b4dbfc